QtBeef/src/Qt/qtabwidget.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QTabWidget
// --------------------------------------------------------------
[CRepr]
struct QTabWidget_Ptr: void
{
}
extension CQt
{
	[LinkName("QTabWidget_new")]
	public static extern QTabWidget_Ptr* QTabWidget_new(QWidget_Ptr* parent);
	[LinkName("QTabWidget_new2")]
	public static extern QTabWidget_Ptr* QTabWidget_new2();
	[LinkName("QTabWidget_Delete")]
	public static extern void QTabWidget_Delete(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_MetaObject")]
	public static extern QMetaObject_Ptr* QTabWidget_MetaObject(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_Qt_Metacast")]
	public static extern void* QTabWidget_Qt_Metacast(QTabWidget_Ptr* self, c_char* param1);
	[LinkName("QTabWidget_Qt_Metacall")]
	public static extern c_int QTabWidget_Qt_Metacall(QTabWidget_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QTabWidget_Tr")]
	public static extern libqt_string QTabWidget_Tr(c_char* s);
	[LinkName("QTabWidget_AddTab")]
	public static extern c_int QTabWidget_AddTab(QTabWidget_Ptr* self, QWidget_Ptr* widget, libqt_string* param2);
	[LinkName("QTabWidget_AddTab2")]
	public static extern c_int QTabWidget_AddTab2(QTabWidget_Ptr* self, QWidget_Ptr* widget, QIcon_Ptr* icon, libqt_string* label);
	[LinkName("QTabWidget_InsertTab")]
	public static extern c_int QTabWidget_InsertTab(QTabWidget_Ptr* self, c_int index, QWidget_Ptr* widget, libqt_string* param3);
	[LinkName("QTabWidget_InsertTab2")]
	public static extern c_int QTabWidget_InsertTab2(QTabWidget_Ptr* self, c_int index, QWidget_Ptr* widget, QIcon_Ptr* icon, libqt_string* label);
	[LinkName("QTabWidget_RemoveTab")]
	public static extern void QTabWidget_RemoveTab(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_IsTabEnabled")]
	public static extern bool QTabWidget_IsTabEnabled(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_SetTabEnabled")]
	public static extern void QTabWidget_SetTabEnabled(QTabWidget_Ptr* self, c_int index, bool enabled);
	[LinkName("QTabWidget_IsTabVisible")]
	public static extern bool QTabWidget_IsTabVisible(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_SetTabVisible")]
	public static extern void QTabWidget_SetTabVisible(QTabWidget_Ptr* self, c_int index, bool visible);
	[LinkName("QTabWidget_TabText")]
	public static extern libqt_string QTabWidget_TabText(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_SetTabText")]
	public static extern void QTabWidget_SetTabText(QTabWidget_Ptr* self, c_int index, libqt_string* text);
	[LinkName("QTabWidget_TabIcon")]
	public static extern QIcon_Ptr QTabWidget_TabIcon(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_SetTabIcon")]
	public static extern void QTabWidget_SetTabIcon(QTabWidget_Ptr* self, c_int index, QIcon_Ptr* icon);
	[LinkName("QTabWidget_SetTabToolTip")]
	public static extern void QTabWidget_SetTabToolTip(QTabWidget_Ptr* self, c_int index, libqt_string* tip);
	[LinkName("QTabWidget_TabToolTip")]
	public static extern libqt_string QTabWidget_TabToolTip(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_SetTabWhatsThis")]
	public static extern void QTabWidget_SetTabWhatsThis(QTabWidget_Ptr* self, c_int index, libqt_string* text);
	[LinkName("QTabWidget_TabWhatsThis")]
	public static extern libqt_string QTabWidget_TabWhatsThis(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_CurrentIndex")]
	public static extern c_int QTabWidget_CurrentIndex(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_CurrentWidget")]
	public static extern QWidget_Ptr* QTabWidget_CurrentWidget(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_Widget")]
	public static extern QWidget_Ptr* QTabWidget_Widget(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_IndexOf")]
	public static extern c_int QTabWidget_IndexOf(QTabWidget_Ptr* self, QWidget_Ptr* widget);
	[LinkName("QTabWidget_Count")]
	public static extern c_int QTabWidget_Count(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_TabPosition")]
	public static extern QTabWidget_TabPosition QTabWidget_TabPosition(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_SetTabPosition")]
	public static extern void QTabWidget_SetTabPosition(QTabWidget_Ptr* self, QTabWidget_TabPosition position);
	[LinkName("QTabWidget_TabsClosable")]
	public static extern bool QTabWidget_TabsClosable(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_SetTabsClosable")]
	public static extern void QTabWidget_SetTabsClosable(QTabWidget_Ptr* self, bool closeable);
	[LinkName("QTabWidget_IsMovable")]
	public static extern bool QTabWidget_IsMovable(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_SetMovable")]
	public static extern void QTabWidget_SetMovable(QTabWidget_Ptr* self, bool movable);
	[LinkName("QTabWidget_TabShape")]
	public static extern QTabWidget_TabShape QTabWidget_TabShape(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_SetTabShape")]
	public static extern void QTabWidget_SetTabShape(QTabWidget_Ptr* self, QTabWidget_TabShape s);
	[LinkName("QTabWidget_SizeHint")]
	public static extern QSize_Ptr QTabWidget_SizeHint(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_MinimumSizeHint")]
	public static extern QSize_Ptr QTabWidget_MinimumSizeHint(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_HeightForWidth")]
	public static extern c_int QTabWidget_HeightForWidth(QTabWidget_Ptr* self, c_int width);
	[LinkName("QTabWidget_HasHeightForWidth")]
	public static extern bool QTabWidget_HasHeightForWidth(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_SetCornerWidget")]
	public static extern void QTabWidget_SetCornerWidget(QTabWidget_Ptr* self, QWidget_Ptr* w);
	[LinkName("QTabWidget_CornerWidget")]
	public static extern QWidget_Ptr* QTabWidget_CornerWidget(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_ElideMode")]
	public static extern Qt_TextElideMode QTabWidget_ElideMode(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_SetElideMode")]
	public static extern void QTabWidget_SetElideMode(QTabWidget_Ptr* self, Qt_TextElideMode mode);
	[LinkName("QTabWidget_IconSize")]
	public static extern QSize_Ptr QTabWidget_IconSize(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_SetIconSize")]
	public static extern void QTabWidget_SetIconSize(QTabWidget_Ptr* self, QSize_Ptr* size);
	[LinkName("QTabWidget_UsesScrollButtons")]
	public static extern bool QTabWidget_UsesScrollButtons(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_SetUsesScrollButtons")]
	public static extern void QTabWidget_SetUsesScrollButtons(QTabWidget_Ptr* self, bool useButtons);
	[LinkName("QTabWidget_DocumentMode")]
	public static extern bool QTabWidget_DocumentMode(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_SetDocumentMode")]
	public static extern void QTabWidget_SetDocumentMode(QTabWidget_Ptr* self, bool set);
	[LinkName("QTabWidget_TabBarAutoHide")]
	public static extern bool QTabWidget_TabBarAutoHide(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_SetTabBarAutoHide")]
	public static extern void QTabWidget_SetTabBarAutoHide(QTabWidget_Ptr* self, bool enabled);
	[LinkName("QTabWidget_Clear")]
	public static extern void QTabWidget_Clear(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_TabBar")]
	public static extern QTabBar_Ptr* QTabWidget_TabBar(QTabWidget_Ptr* self);
	[LinkName("QTabWidget_SetCurrentIndex")]
	public static extern void QTabWidget_SetCurrentIndex(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_SetCurrentWidget")]
	public static extern void QTabWidget_SetCurrentWidget(QTabWidget_Ptr* self, QWidget_Ptr* widget);
	[LinkName("QTabWidget_CurrentChanged")]
	public static extern void QTabWidget_CurrentChanged(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_TabCloseRequested")]
	public static extern void QTabWidget_TabCloseRequested(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_TabBarClicked")]
	public static extern void QTabWidget_TabBarClicked(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_TabBarDoubleClicked")]
	public static extern void QTabWidget_TabBarDoubleClicked(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_TabInserted")]
	public static extern void QTabWidget_TabInserted(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_TabRemoved")]
	public static extern void QTabWidget_TabRemoved(QTabWidget_Ptr* self, c_int index);
	[LinkName("QTabWidget_ShowEvent")]
	public static extern void QTabWidget_ShowEvent(QTabWidget_Ptr* self, QShowEvent_Ptr* param1);
	[LinkName("QTabWidget_ResizeEvent")]
	public static extern void QTabWidget_ResizeEvent(QTabWidget_Ptr* self, QResizeEvent_Ptr* param1);
	[LinkName("QTabWidget_KeyPressEvent")]
	public static extern void QTabWidget_KeyPressEvent(QTabWidget_Ptr* self, QKeyEvent_Ptr* param1);
	[LinkName("QTabWidget_PaintEvent")]
	public static extern void QTabWidget_PaintEvent(QTabWidget_Ptr* self, QPaintEvent_Ptr* param1);
	[LinkName("QTabWidget_SetTabBar")]
	public static extern void QTabWidget_SetTabBar(QTabWidget_Ptr* self, QTabBar_Ptr* tabBar);
	[LinkName("QTabWidget_ChangeEvent")]
	public static extern void QTabWidget_ChangeEvent(QTabWidget_Ptr* self, QEvent_Ptr* param1);
	[LinkName("QTabWidget_Event")]
	public static extern bool QTabWidget_Event(QTabWidget_Ptr* self, QEvent_Ptr* param1);
	[LinkName("QTabWidget_InitStyleOption")]
	public static extern void QTabWidget_InitStyleOption(QTabWidget_Ptr* self, QStyleOptionTabWidgetFrame_Ptr* option);
	[LinkName("QTabWidget_Tr2")]
	public static extern libqt_string QTabWidget_Tr2(c_char* s, c_char* c);
	[LinkName("QTabWidget_Tr3")]
	public static extern libqt_string QTabWidget_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QTabWidget_SetCornerWidget2")]
	public static extern void QTabWidget_SetCornerWidget2(QTabWidget_Ptr* self, QWidget_Ptr* w, Qt_Corner corner);
	[LinkName("QTabWidget_CornerWidget1")]
	public static extern QWidget_Ptr* QTabWidget_CornerWidget1(QTabWidget_Ptr* self, Qt_Corner corner);
}
